--- a/src/job.yml
+++ b/src/job.yml
@@ -1,7 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 code: model
 command: >-
-  python 
+  python model/train.py
   --reg_rate ${{inputs.reg_rate}}
   --data-dir ${{inputs.training_data}}
 inputs:
